--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 MIX_BASE_API="${BASE_API}"
 MIX_LARAVUE_PATH="${LARAVUE_PATH}"
+
+JWT_SECRET=
+JWT_TTL=
+TINIFY_KEY=
